--- a/style.css
+++ b/style.css
@@ -71,3 +71,40 @@ body
 {
 	color:white;
 }
+
+#wskazowka
+{
+	width: 900px;
+	text-align: center;
+	color: #FFD700;
+	font-size: 24px;
+	margin-bottom: 20px;
+	min-height: 40px;
+}
+
+#przycisk-wskazowka
+{
+	width: 200px;
+	padding: 10px 20px;
+	font-size: 20px;
+	background-color: #003366;
+	color: #FFD700;
+	border: 3px solid #FFD700;
+	border-radius: 10px;
+	cursor: pointer;
+	font-family: 'Inconsolata';
+	font-weight: 700;
+	margin-bottom: 20px;
+}
+
+#przycisk-wskazowka:hover:not(:disabled)
+{
+	background-color: #004488;
+	color: white;
+	border: 3px solid white;
+}
+
+#przycisk-wskazowka:disabled
+{
+	cursor: not-allowed;
+}
